k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labjavacicd
  namespace: app
  labels:
    app.kubernetes.io/name: labjavacicd
    app.kubernetes.io/part-of: java-cicd-lab
    app.kubernetes.io/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: labjavacicd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: labjavacicd
        app.kubernetes.io/part-of: java-cicd-lab
        app.kubernetes.io/component: api
      annotations:
        lab.observability/logging: json
        lab.observability/request-id-header: X-Request-Id
    spec:
      containers:
        - name: app
          image: labjavacicd:0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
