k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labjavacicd
  namespace: app
  labels:
    app.kubernetes.io/name: labjavacicd
    app.kubernetes.io/part-of: java-cicd-lab
spec:
  selector:
    app.kubernetes.io/name: labjavacicd
  ports:
    - name: http
      port: 80
      targetPort: http
